Improved transition animation further, fixed lists spacing

--- a/style.css
+++ b/style.css
@@ -322,6 +322,7 @@ li {
 ol, ul {
   list-style: none;
   counter-reset: counter;
+  margin-top: 14px;
 }
 
 ol li {
